# ckanext-comments

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  gulpfile.js  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/comments/: config.py  config_declaration.yaml  const.py  exceptions.py  helpers.py  plugin.py  signals.py  subject.py  utils.py  views.py
ckanext/comments/assets/: webassets.yml
ckanext/comments/assets/css/: comments-thread.css
ckanext/comments/assets/js/: comments-thread.js
ckanext/comments/assets/less/: comments-thread.less
ckanext/comments/i18n/: ckanext-comments.pot
ckanext/comments/i18n/ar/LC_MESSAGES/: ckanext-comments.mo  ckanext-comments.po
ckanext/comments/logic/: action.py  auth.py  schema.py  validators.py
ckanext/comments/migration/comments/: alembic.ini  env.py
ckanext/comments/migration/comments/versions/: 275515c51af1_init_tables.py  910f3d575038_add_cascade_to_comments.py  acd1862c2e17_add_extras_column_to_comments_table.py  eae6ad2c1313_anonymouse_col.py  efe4bb692273_your_migration_message.py
ckanext/comments/model/: __init__.py  base.py  comment.py  dictize.py  thread.py
ckanext/comments/templates/comments/: detail.html  edit.html  edit_base.html  search.html  ui.html
ckanext/comments/templates/comments/snippets/: advanced_filtering.html  comment.html  comment_form.html  comment_item.html  comments_list.html  comments_search_form.html  comments_search_result_text.html  confirmation.html  helper.html  list.html  stats-indicators.html  thread.html  user_info.html
ckanext/comments/templates/comments/ui/: comments.html
ckanext/comments/templates/comments/ui/snippets/: comment.html
ckanext/comments/templates/package/: read.html
ckanext/comments/tests/: conftest.py  factories.py  test_helpers.py  test_plugin.py
ckanext/comments/tests/logic/: test_action.py  test_auth.py
ckanext/comments/tests/model/: test_comment.py  test_dictize.py  test_thread.py
