[metadata]
name = ckanext-comments
version = 0.0.18
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-comments
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10

keywords = CKAN

[options]
python_requires = >=3.7
packages = find:
namespace_packages = ckanext
install_requires =
                 blinker
                 typing-extensions
include_package_data = True

[options.entry_points]
ckan.plugins =
             comments = ckanext.comments.plugin:CommentsPlugin
babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/comments/i18n/ckanext-comments.pot
width = 80

[init_catalog]
domain = ckanext-comments
input_file = ckanext/comments/i18n/ckanext-comments.pot
output_dir = ckanext/comments/i18n

[update_catalog]
domain = ckanext-comments
input_file = ckanext/comments/i18n/ckanext-comments.pot
output_dir = ckanext/comments/i18n
previous = true

[compile_catalog]
domain = ckanext-comments
directory = ckanext/comments/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
testpaths = ckanext/comments/tests
